@@ -11,7 +11,7 @@ CDBOOT = ${IMGROOT}/usr/standalone/i386/cdboot
 include ${SRCROOT}/Make.rules
 
 # The order of building is important.
-SUBDIRS = klibc uClibc++ Resolution
+SUBDIRS = klibc uClibc++ Resolution HelloWorld
 
 
 CFLAGS= -O3 $(MORECPP) -arch i386 -g -static
@@ -22,7 +22,7 @@ INC = -I$(LIBSAIODIR)
 
 
 ifeq (${CONFIG_MODULES}, y)
-all install: $(SYMROOT) $(OBJROOT) objroot_dirs
+all install: $(SYMROOT) $(OBJROOT) objroot_dirs $(SYMROOT)/boot_modules.c $(SYMROOT)/boot_modules.h
 	@for i in ${SUBDIRS}; \
 	do \
 		echo ================= make $@ for $$i =================; \
@@ -37,13 +37,32 @@ all install: $(SYMROOT) $(OBJROOT) objroot_dirs
 			"RC_CFLAGS=$(RC_CFLAGS)" $@ 			  \
 		) || exit $$?; 						  \
 	done
+	
+	@# Finish up boot_modules.c
+	@echo "}" >> $(SYMROOT)/boot_modules.c
+
+	
 else
 all:
 endif
 
 .PHONY: objroot_dirs
+.PHONY: $(SYMROOT)/boot_modules.h
+.PHONY: $(SYMROOT)/boot_modules.c
+
 objroot_dirs:
 	@rm -rf module_includes
 	@mkdir module_includes
 	@rm -rf "$(SYMROOT)/modules/"
 	@mkdir "$(SYMROOT)/modules/"
+	
+	
+$(SYMROOT)/boot_modules.c: ${OBJROOT} ${SYMROOT}/modules/ ${OBJROOT} $(addprefix $(OBJROOT)/, ${MODULE_OBJS})
+	@echo "// Autogenerated - do not modify" > $@
+	@echo "#include \"boot_modules.h\"" >> $@
+	@echo "void start_built_in_modules() {" >> $@
+	
+$(SYMROOT)/boot_modules.h: ${OBJROOT} ${SYMROOT}/modules/ ${OBJROOT} $(addprefix $(OBJROOT)/, ${MODULE_OBJS})
+	@echo "// Autogenerated - do not modify" > $@
+	@echo "void start_built_in_modules(); " > $@
+
